--- a/Documentation/3x02.md
+++ b/Documentation/3x02.md
@@ -1,8 +1,6 @@
-Вот блок **3.2 — SQL-оптимизатор**, оформленный по промышленному шаблону:
+# 🧱 Блок 3.1 — SQL-оптимизатор
 
 ---
-
-### 📘 3.2 — SQL-оптимизатор
 
 ## 🆔 Идентификатор блока
 
