--- a/Documentation/3x01.md
+++ b/Documentation/3x01.md
@@ -4,8 +4,10 @@
 
 ## 🆔 Идентификатор блока
 
-* Пакет 3 — SQL и Языки
-* Блок 3.1 — SQL Ядро и Парсер ANSI:2011+
+* **Пакет:** 3 — SQL и Языки
+* **Блок:** 3.1 — SQL Ядро и Парсер ANSI:2011+
+
+---
 
 ## 🎯 Назначение
 
