--- a/Documentation/3x02.md
+++ b/Documentation/3x02.md
@@ -4,8 +4,10 @@
 
 ## 🆔 Идентификатор блока
 
-* Пакет 3 — SQL и Языки
-* Блок 3.2 — SQL-оптимизатор
+* **Пакет:** 3 — SQL и Языки
+* **Блок:** 3.2 — SQL-оптимизатор
+
+---
 
 ## 🎯 Назначение
 
