--- a/Documentation/3x03.md
+++ b/Documentation/3x03.md
@@ -6,8 +6,8 @@
 
 ## 🆔 Идентификатор блока
 
-* Пакет 3 — SQL и Языки
-* Блок 3.3 — Встроенные процедуры, триггеры и exec hooks
+* **Пакет:** 3 — SQL и Языки
+* **Блок:** 3.3 — Встроенные процедуры, триггеры и exec hooks
 
 ## 🎯 Назначение
 
