--- a/Documentation/3x04.md
+++ b/Documentation/3x04.md
@@ -6,8 +6,8 @@
 
 ## 🆔 Идентификатор блока
 
-* Пакет 3 — SQL и Языки
-* Блок 3.4 — Расширения JSON, агрегаты, FILTER и аналитические функции
+* **Пакет:** 3 — SQL и Языки
+* **Блок:** 3.4 — Расширения JSON, агрегаты, FILTER и аналитические функции
 
 ## 🎯 Назначение
 
