--- a/Documentation/3x05.md
+++ b/Documentation/3x05.md
@@ -6,8 +6,8 @@
 
 ## 🆔 Идентификатор блока
 
-* Пакет 3 — SQL и Языки
-* Блок 3.5 — Cost-Based и Rule-Based Optimizer
+* **Пакет:** 3 — SQL и Языки
+* **Блок:** 3.5 — Cost-Based и Rule-Based Optimizer
 
 ## 🎯 Назначение
 
