--- a/Documentation/3x06.md
+++ b/Documentation/3x06.md
@@ -6,8 +6,8 @@
 
 ## 🆔 Идентификатор блока
 
-* Пакет 3 — SQL и Языки
-* Блок 3.6 — Реоптимизация и Обратная Связь
+* **Пакет:** 3 — SQL и Языки
+* **Блок:** 3.6 — Реоптимизация и Обратная Связь
 
 ## 🎯 Назначение
 
