--- a/Documentation/3x03.md
+++ b/Documentation/3x03.md
@@ -1,13 +1,13 @@
-Вот блок **3.3 — Встроенные процедуры, триггеры и exec hooks**, оформленный по промышленному шаблону:
+# 🧱 Блок 3.3 — Встроенные процедуры, триггеры и exec hooks
 
 ---
-
-### 📘 3.3 — Встроенные процедуры, триггеры и exec hooks
 
 ## 🆔 Идентификатор блока
 
 * **Пакет:** 3 — SQL и Языки
 * **Блок:** 3.3 — Встроенные процедуры, триггеры и exec hooks
+
+---
 
 ## 🎯 Назначение
 
