--- a/Documentation/3x05.md
+++ b/Documentation/3x05.md
@@ -1,3 +1,6 @@
+# 🧱 Блок 3.3 — Встроенные процедуры, триггеры и exec hooks
+
+---
 Вот блок **3.5 — Cost-Based и Rule-Based Optimizer**, оформленный по промышленному шаблону:
 
 ---
