--- a/Documentation/3x07.md
+++ b/Documentation/3x07.md
@@ -1,3 +1,6 @@
+# 🧱 Блок 3.3 — Встроенные процедуры, триггеры и exec hooks
+
+---
 Вот блок **3.7 — Поддержка оконных функций, ROLLUP и CUBE**:
 
 ---
