--- a/Documentation/3x04.md
+++ b/Documentation/3x04.md
@@ -1,7 +1,4 @@
-# 🧱 Блок 3.3 — Встроенные процедуры, триггеры и exec hooks
-
----
-Вот блок **3.4 — Расширения JSON, агрегаты, FILTER и аналитические функции**, оформленный по утверждённому промышленному шаблону:
+# 🧱 Блок 3.4 — Расширения JSON, агрегаты, FILTER и аналитические функции
 
 ---
 
