--- a/Documentation/3x05.md
+++ b/Documentation/3x05.md
@@ -1,16 +1,13 @@
-# 🧱 Блок 3.3 — Встроенные процедуры, триггеры и exec hooks
+# 🧱 Блок 3.5 — Cost-Based и Rule-Based Optimizer
 
 ---
-Вот блок **3.5 — Cost-Based и Rule-Based Optimizer**, оформленный по промышленному шаблону:
-
----
-
-### 📘 3.5 — Cost-Based и Rule-Based Optimizer
 
 ## 🆔 Идентификатор блока
 
 * **Пакет:** 3 — SQL и Языки
 * **Блок:** 3.5 — Cost-Based и Rule-Based Optimizer
+
+---
 
 ## 🎯 Назначение
 
