--- a/Documentation/3x06.md
+++ b/Documentation/3x06.md
@@ -1,16 +1,13 @@
-# 🧱 Блок 3.3 — Встроенные процедуры, триггеры и exec hooks
+# 🧱 Блок 3.6 — Реоптимизация и Обратная Связь (Adaptive Re-Optimization & Feedback Loop)
 
 ---
-Вот следующий блок:
-
----
-
-### 📘 3.6 — Реоптимизация и Обратная Связь (Adaptive Re-Optimization & Feedback Loop)
 
 ## 🆔 Идентификатор блока
 
 * **Пакет:** 3 — SQL и Языки
-* **Блок:** 3.6 — Реоптимизация и Обратная Связь
+* **Блок:** 3.6 — Реоптимизация и Обратная Связь (Adaptive Re-Optimization & Feedback Loop)
+
+---
 
 ## 🎯 Назначение
 
