--- a/Documentation/3x07.md
+++ b/Documentation/3x07.md
@@ -1,16 +1,13 @@
-# 🧱 Блок 3.3 — Встроенные процедуры, триггеры и exec hooks
+# 🧱 Блок 3.7 — Поддержка оконных функций, ROLLUP и CUBE
 
 ---
-Вот блок **3.7 — Поддержка оконных функций, ROLLUP и CUBE**:
-
----
-
-## 📘 3.7 — Поддержка оконных функций, ROLLUP и CUBE
 
 ## 🆔 Идентификатор блока
 
 * Пакет 3 — SQL и Языки
 * Блок 3.7 — Поддержка оконных функций, ROLLUP и CUBE
+
+---
 
 ## 🎯 Назначение
 
