--- a/Documentation/3x07.md
+++ b/Documentation/3x07.md
@@ -4,8 +4,8 @@
 
 ## 🆔 Идентификатор блока
 
-* Пакет 3 — SQL и Языки
-* Блок 3.7 — Поддержка оконных функций, ROLLUP и CUBE
+* **Пакет:** 3 — SQL и Языки
+* **Блок:** 3.7 — Поддержка оконных функций, ROLLUP и CUBE
 
 ---
 
