--- a/Documentation/3x08.md
+++ b/Documentation/3x08.md
@@ -1,13 +1,13 @@
-Вот блок **3.8 — JSON и semi-structured функции SQL**:
+# 🧱 Блок 3.8 — JSON и semi-structured функции SQL
 
 ---
 
-## 📘 3.8 — JSON и semi-structured функции SQL
-
 ## 🆔 Идентификатор блока
 
-* Пакет 3 — SQL и Языки
-* Блок 3.8 — JSON и semi-structured функции SQL
+* **Пакет:** 3 — SQL и Языки
+* **Блок:** 3.8 — JSON и semi-structured функции SQL
+
+---
 
 ## 🎯 Назначение
 
