--- a/Documentation/3x02.md
+++ b/Documentation/3x02.md
@@ -1,11 +1,11 @@
-# 🧱 Блок 3.2 — SQL-оптимизатор
+# 🧱 Блок 3.2 — SQL-оптимизатор (Cost-based / Rule-based / Adaptive)
 
 ---
 
 ## 🆔 Идентификатор блока
 
 * **Пакет:** 3 — SQL и Языки
-* **Блок:** 3.2 — SQL-оптимизатор
+* **Блок:** 3.2 — SQL-оптимизатор (Cost-based / Rule-based / Adaptive)
 
 ---
 
