--- a/Documentation/3x00.md
+++ b/Documentation/3x00.md
@@ -1,7 +1,7 @@
 # 📦 Пакет 3 — SQL и языки
 
 | № блока | Название блока                                           |
-| ------: | -------------------------------------------------------- |
+| ------- | -------------------------------------------------------- |
 |     3.1 | SQL Ядро и Парсер ANSI:2011+                             |
 |     3.2 | SQL-оптимизатор (Cost-based / Rule-based / Adaptive)     |
 |     3.3 | Расширения SQL: JSON, FILTER, агрегаты, MATCH\_RECOGNIZE |
@@ -9,3 +9,17 @@
 |     3.5 | Поддержка UDF/UDAF: Lua, WASM, JS, C/C++                 |
 |     3.6 | Язык процедур и триггеров (PL/SQL-подобный)              |
 |     3.7 | Встроенные процедуры: окна, прогноз, кластеризация       |
+
+новая 
+
+| № блока | Название блока                                                               |
+| ------- | ---------------------------------------------------------------------------- |
+|     3.1 | SQL Ядро и Парсер ANSI:2011+                                                 |
+|     3.2 | SQL-оптимизатор (Cost-based / Rule-based / Adaptive)                         |
+|     3.3 | Встроенные процедуры, триггеры и exec hooks                                  |
+|     3.4 | Расширения JSON, агрегаты, FILTER и аналитические функции                    |
+|     3.5 | Cost-Based и Rule-Based Optimizer                                            |
+|     3.6 | Реоптимизация и Обратная Связь (Adaptive Re-Optimization & Feedback Loop)    |
+|     3.7 | Поддержка оконных функций, ROLLUP и CUBE                                     |
+|     3.8 | JSON и semi-structured функции SQL                                           |
+|     3.9 | Расширения SQL: FILTER, MATCH_RECOGNIZE, MERGE                               |
