--- a/Documentation/0x03.md
+++ b/Documentation/0x03.md
@@ -316,21 +316,16 @@ package "SQL Optimizer (3.2)" {
 * v1.0 — адаптивный reopt (2025-07-19)
 
 
-# 🧱 Блок 3.2 — SQL-оптимизатор (Cost-based / Rule-based / Adaptive)
+# 🧱 Блок 3.3 — Расширения SQL: JSON, FILTER, агрегаты, аналитика, MATCH\_RECOGNIZE
 
 ---
 
 ## 🆔 Идентификатор блока
 
-* **Пакет:** 3. SQL и языки
-* **Блок:** 3.2 SQL-оптимизатор (Cost-based / Rule-based / Adaptive)
-
-# 3.3 — Расширения SQL: JSON, FILTER, агрегаты, аналитика, MATCH\_RECOGNIZE
-
-## 🆔 Идентификатор блока
-
 **Пакет 3 — SQL и Языки**
 **Блок 3.3 — Расширения SQL: JSON, FILTER, агрегаты, аналитика, MATCH\_RECOGNIZE**
+
+---
 
 ## 🌟 Назначение
 
@@ -441,13 +436,16 @@ MATCH_RECOGNIZE (
 * Полная типизация JSON\_SCHEMA
 * MATCH\_RECOGNIZE с детекторами а
 
+# 🧱 Блок 3.3 — Встроенный DSL для транзакций (в стиле ABAP/PL/SQL)
 
-# 3.4 — Встроенный DSL для транзакций
+---
 
-## 🏢 Идентификатор блока
+## 🆔 Идентификатор блока
 
-**Пакет 3 — SQL и Языки**
-**Блок 3.4 — Встроенный DSL для транзакций (в стиле ABAP/PL/SQL)**
+* **Пакет:** 3 — SQL и Языки
+* **Блок:** 3.4 — Встроенный DSL для транзакций (в стиле ABAP/PL/SQL)
+
+---
 
 ## 🎯 Назначение
 
@@ -582,12 +580,16 @@ DR --> TX
 | `DSL002` | "Hook target not found"    | Указанная таблица или событие не существует |
 | `DSL003` | "Execution stack overflow" | Превышена глубина рекурсии или call stack   |
 
-# 3.5 — Поддержка UDF/UDAF: Lua, WASM, JS, C/C++
+# 🧱 Блок 3.5 — Поддержка UDF/UDAF: Lua, WASM, JS, C/C++
 
-## 🏢 Идентификатор блока
+---
 
-**Пакет 3 — SQL и Языки**
-**Блок 3.5 — Поддержка UDF/UDAF: Lua, WASM, JS, C/C++**
+## 🆔 Идентификатор блока
+
+**Пакет:** 3 — SQL и Языки
+**Блок:** 3.5 — Поддержка UDF/UDAF: Lua, WASM, JS, C/C++
+
+---
 
 ## 🌟 Назначение
 
@@ -700,12 +702,16 @@ UDFRegistry --> NativePluginManager
 
 * Реализация аномалий, финансовых расчё
 
-# 3.6 — PL/SQL-подобный язык: процедуры, триггеры, exec hooks
+# 🧱 Блок 3.6 — PL/SQL-подобный язык: процедуры, триггеры, exec hooks
 
-## 🏢 Идентификатор блока
+---
 
-**Пакет 3 — SQL и Языки**
-**Блок 3.6 — PL/SQL-подобный язык: процедуры, триггеры, exec hooks**
+## 🆔 Идентификатор блока
+
+**Пакет:** 3 — SQL и Языки
+**Блок:** 3.6 — PL/SQL-подобный язык: процедуры, триггеры, exec hooks
+
+---
 
 ## 🎯 Назначение
 
@@ -841,12 +847,16 @@ PR --> TX
 | `PL002` | "Hook registration failed"   | Невозможно зарегистрировать exec hook    |
 | `PL003` | "Procedure call depth limit" | Превышена допустимая глубина вложенности |
 
-# 3.7 — Встроенные процедуры: оконные функции, кластеризация, прогнозирование
+# 🧱 Блок 3.7 — Встроенные процедуры: оконные функции, кластеризация, прогнозирование
 
-## 🏢 Идентификатор блока
+---
 
-**Пакет 3 — SQL и Языки**
-**Блок 3.7 — Встроенные процедуры: оконные функции, кластеризация, прогнозирование**
+## 🆔 Идентификатор блока
+
+**Пакет:** 3 — SQL и Языки
+**Блок:** 3.7 — Встроенные процедуры: оконные функции, кластеризация, прогнозирование
+
+---
 
 ## 🎯 Назначение
 
