--- a/Documentation/3x10.md
+++ b/Documentation/3x10.md
@@ -1,10 +1,13 @@
+# 🧱 Блок 3.10 — UDF/UDAF и сторонние языки (C/Lua/WASM/JS)
 
-## 📘 3.10 — UDF/UDAF и сторонние языки (C/Lua/WASM/JS)
+---
 
 ## 🆔 Идентификатор блока
 
-* Пакет 3 — SQL и Языки
-* Блок 3.10 — UDF/UDAF и сторонние языки (C/Lua/WASM/JS)
+* **Пакет:** 3 — SQL и Языки
+* **Блок:** 3.10 — UDF/UDAF и сторонние языки (C/Lua/WASM/JS)
+
+---
 
 ## 🎯 Назначение
 
