--- a/Documentation/2x09.md
+++ b/Documentation/2x09.md
@@ -1,1 +1,139 @@
+# 🧱 Блок 2.9 — Версионирование и системное время (System-Versioned Tables + AS OF Queries)
 
+---
+
+## 🆔 Идентификатор блока
+
+* **Пакет:** 2 — Транзакционность и Надёжность
+* **Блок:** 2.9 — Версионирование и системное время (System-Versioned Tables + AS OF Queries)
+
+---
+
+## 🎯 Назначение
+
+Подсистема версионирования предназначена для поддержки исторических представлений данных, автоматического управления временными периодами валидности строк и выполнения запросов в контексте системного времени. Она критична для аудита, анализа изменений, юридического соответствия и отката к состоянию БД в прошлом.
+
+## ⚙️ Функциональность
+
+| Подсистема                     | Реализация и особенности                                                      |
+| ------------------------------ | ----------------------------------------------------------------------------- |
+| Версионированные таблицы       | `SYSTEM VERSIONED` расширение SQL, автоматическое добавление столбцов времени |
+| Исторические запросы           | `AS OF SYSTEM TIME` и `VERSIONS BETWEEN` запросы                              |
+| Интеграция с MVCC              | Использование MVCC chain и snapshot isolation для временного доступа          |
+| TTL и Retention Policy         | Автоматическое удаление устаревших версий, политика хранения по времени       |
+| Аудит и отслеживание изменений | Построение временной линии изменений с точностью до наносекунд                |
+
+## 💾 Формат хранения данных
+
+```c
+// version_entry_t: одна версия строки
+typedef struct {
+  tx_id_t created_by;
+  tx_id_t deleted_by;
+  timestamp_t valid_from;
+  timestamp_t valid_to;
+  row_data_t payload;
+} version_entry_t;
+```
+
+## 🔄 Зависимости и связи (PlantUML)
+
+```
+SystemVersioning --> MVCC
+SystemVersioning --> QueryEngine
+SystemVersioning --> Storage
+SystemVersioning --> SnapshotIsolation
+```
+
+## 🧠 Особенности реализации
+
+* Язык: C23
+* Метка времени с наносекундной точностью (atomic `timestamp_t`)
+* Использование сжатых MVCC-цепочек для хранения версий
+* Интеграция в планировщик: фильтрация по времени при сканировании таблиц
+
+## 📂 Связанные модули кода
+
+* `src/tx/versioning.c`
+* `include/tx/versioning.h`
+* `src/sql/as_of.c`
+* `include/sql/as_of.h`
+
+## 🔧 Основные функции на C
+
+| Имя                     | Прототип                                                          | Назначение                                         |
+| ----------------------- | ----------------------------------------------------------------- | -------------------------------------------------- |
+| `version_insert`        | `void version_insert(table_t *t, row_data_t *r, timestamp_t ts);` | Вставка новой версии строки с меткой времени       |
+| `version_query_as_of`   | `bool version_query_as_of(tx_snapshot_t *snap, timestamp_t ts);`  | Поиск строки, валидной на указанный момент времени |
+| `version_purge_expired` | `void version_purge_expired(table_t *t, timestamp_t now);`        | Очистка устаревших версий строк                    |
+| `version_range_query`   | `iter_t *version_range_query(...);`                               | Построение диапазонного сканирования по времени    |
+
+## 🧪 Тестирование
+
+* Юнит-тесты: `tests/tx/test_versioning.c`
+* Интеграционные: `tests/sql/test_asof_query.sql`
+* Stress: массовые версии, TTL-purge под нагрузкой
+* Fuzz: генерация истории с конфликтующими метками времени
+
+## 📊 Производительность
+
+| Метрика                     | Значение                             |
+| --------------------------- | ------------------------------------ |
+| Задержка AS OF-запроса      | < 1.2 мс при глубине 10K версий      |
+| Скорость очистки TTL        | \~5M записей/с на shard              |
+| Расход памяти на 100 версий | \~3.8x от одной строки с компрессией |
+
+## ✅ Соответствие SAP HANA+
+
+| Критерий                   | Оценка | Комментарий                                            |
+| -------------------------- | ------ | ------------------------------------------------------ |
+| Поддержка SYSTEM VERSIONED | 100    | Расширение SQL + автоматические поля времени           |
+| Запросы AS OF / BETWEEN    | 100    | Через snapshot-aware MVCC API                          |
+| TTL, Purge, Retention      | 95     | Планируется адаптивная policy на основе access pattern |
+
+## 📎 Пример кода на C
+
+```c
+if (version_query_as_of(&session->snapshot, ts)) {
+  return payload->field[0];
+} else {
+  return NULL;
+}
+```
+
+## 🧩 Будущие доработки
+
+* Адаптивные TTL и политика на основе анализа доступа
+* Архивирование версий на диск с использованием Parquet
+* Интеграция с BI/аналитикой временных рядов
+
+## 🔐 Безопасность данных
+
+* Исторические версии доступны только при наличии прав
+* Поддержка политики «immutable past» для критичных таблиц
+* Логирование всех изменений в защищённый WAL
+
+## 📤 Сообщения и уведомления
+
+* `I_ASOF_NO_ROW`: нет строки, валидной на указанное время
+* `E_TTL_PURGED`: строка удалена политикой хранения
+* `W_VERSION_CONFLICT`: конфликт временных интервалов при вставке
+
+## 🧩 UML-диаграмма (PlantUML)
+
+```
+@startuml
+package "System Time Versioning (2.9)" {
+  [System Versioning] --> [MVCC]
+  [System Versioning] --> [Storage Engine]
+  [System Versioning] --> [Query Engine]
+  [System Versioning] --> [Snapshot Isolation]
+}
+@enduml
+```
+
+## 🕓 Версионирование и история изменений
+
+* v0.8 — реализация базового INSERT/AS OF (2025-07-10)
+* v1.0 — TTL и TTL purge (2025-07-18)
+* v1.1 — будущая интеграция с внешним хранилищем (в планах)
