--- a/Documentation/4x01.md
+++ b/Documentation/4x01.md
@@ -1,11 +1,13 @@
----
+# 🧱 Блок 4.1 — JDBC/ODBC/CLI-интерфейсы
 
-## 📘 4.1 — JDBC/ODBC/CLI-интерфейсы
+---
 
 ## 🆔 Идентификатор блока
 
-* Пакет 4 — Интерфейсы и Интеграции
-* Блок 4.1 — JDBC/ODBC/CLI-интерфейсы
+* **Пакет:** 4 — Интерфейсы и Интеграции
+* **Блок:** 4.1 — JDBC/ODBC/CLI-интерфейсы
+
+---
 
 ## 🎯 Назначение
 
