--- a/Documentation/9x01.md
+++ b/Documentation/9x01.md
@@ -1,1 +1,162 @@
+---
 
+## 🆔 Идентификатор блока
+
+* **Пакет:** 0. Инициализация и системный старт
+* **Блок:** 0.1 Точка входа (main)
+
+---
+
+# 9.1 — Расширения и пользовательские функции (UDF / UDAF)
+
+## 🏢 Идентификатор блока
+
+* Пакет 9 — Расширяемость
+* Блок 9.1 — Расширения и пользовательские функции (UDF / UDAF)
+
+## 🎯 Назначение
+
+Поддержка пользовательских функций (UDF — User-Defined Functions и UDAF — User-Defined Aggregates) обеспечивает расширяемость ядра СУБД без необходимости модификации исходного кода. Это критично для адаптации под специфические домены (ERP, BI, ML, обработка временных рядов) и создания вычислений в стиле встроенных функций.
+
+## ⚙️ Функциональность
+
+| Подсистема                | Реализация / особенности                               |
+| ------------------------- | ------------------------------------------------------ |
+| Регистрация UDF           | Через SQL: `CREATE FUNCTION` или API                   |
+| Языки реализации          | C/C++, Lua, JS, WebAssembly (WASM), Python             |
+| Безопасное исполнение     | Sandbox, timeouts, ограничения на память и CPU         |
+| Агрегатные функции (UDAF) | Поддержка состояния, инициализации, merge, финализация |
+| Расширения через модули   | Dlopen / LoadLibrary, динамическая загрузка            |
+| Интроспекция и дебаг      | `SHOW FUNCTIONS`, профилировка исполнения              |
+| Версии функций            | Поддержка версионирования функций и rollback           |
+
+## 💾 Формат хранения данных
+
+Функции хранятся в системных таблицах каталога (`system.udf_functions`, `system.udaf_functions`) со следующими полями:
+
+```c
+typedef struct {
+    char name[64];
+    char language[16];
+    char source_code[2048];
+    bool is_aggregate;
+    uint64_t version;
+    bool is_sandboxed;
+} udf_entry_t;
+```
+
+## 🔄 Зависимости и связи
+
+```plantuml
+package "9. Расширяемость" {
+  [9.1 Расширения и пользовательские функции] --> [3.1 SQL Ядро и Парсер]
+  [9.1 Расширения и пользовательские функции] --> [3.2 SQL-оптимизатор]
+  [9.1 Расширения и пользовательские функции] --> [4.5 Внешние процедуры и Webhooks]
+  [9.1 Расширения и пользовательские функции] --> [9.3 Sandbox API]
+}
+```
+
+## 🧠 Особенности реализации
+
+* Расширения на C/C++ собираются как динамические библиотеки и загружаются при запуске или по требованию.
+* UDF в Lua и JS исполняются через встроенные интерпретаторы с безопасным сэндбоксом.
+* WASM-модуль загружается и изолируется с помощью wasm runtime (например, Wasmtime или WAMR).
+* Контроль ресурсов выполняется через ограничения на время, память и изоляцию через системные namespace.
+
+## 📂 Связанные модули кода
+
+* `src/udf/udf.c`
+* `src/udf/udf_lua.c`
+* `src/udf/udf_wasm.c`
+* `include/udf.h`
+* `include/catalog/udf_catalog.h`
+
+## 🔧 Основные функции на C
+
+| Имя функции         | Прототип                                                                 | Описание                                       |
+| ------------------- | ------------------------------------------------------------------------ | ---------------------------------------------- |
+| `udf_register`      | `bool udf_register(udf_entry_t *entry);`                                 | Регистрация новой функции                      |
+| `udf_execute`       | `bool udf_execute(const char *name, db_value_t *args, db_value_t *ret);` | Выполнение функции по имени                    |
+| `udaf_merge`        | `bool udaf_merge(void *state, db_value_t *value);`                       | Слияние промежуточных агрегатов                |
+| `udf_load_dynamic`  | `bool udf_load_dynamic(const char *path);`                               | Загрузка внешней библиотеки                    |
+| `udf_sandbox_check` | `bool udf_sandbox_check(const udf_entry_t *entry);`                      | Проверка на соответствие политике безопасности |
+
+## 🧪 Тестирование
+
+* Unit-тесты: `tests/udf/test_udf.c`
+* Fuzzing для Lua/JS интерпретаторов
+* Stress-тесты на регистрацию и одновременный вызов UDF
+* Coverage-анализ: `make coverage-udf`
+
+## 📊 Производительность
+
+* Задержка вызова UDF (C): \~70–150 нс
+* Задержка вызова UDF (Lua): \~500–1200 нс
+* WASM cold start: \~2–3 мс, горячее исполнение \~500–700 нс
+* Потребление памяти UDF ограничено до 2 MB по умолчанию
+
+## ✅ Соответствие SAP HANA+
+
+| Критерий                          | Выполнено | Комментарий                                      |
+| --------------------------------- | --------- | ------------------------------------------------ |
+| Поддержка UDF/UDAF                | ✅         | Множественные языки, включая WASM                |
+| Безопасное исполнение             | ✅         | Sandbox + контроль ресурсов                      |
+| Поддержка динамических расширений | ✅         | Dlopen / LoadLibrary + runtime загрузка          |
+| Интеграция с SQL                  | ✅         | Полная поддержка CREATE FUNCTION / DROP FUNCTION |
+
+## 📎 Пример кода на C
+
+```c
+udf_entry_t entry = {
+  .name = "add_one",
+  .language = "C",
+  .source_code = "int add_one(int x) { return x + 1; }",
+  .is_aggregate = false,
+  .version = 1,
+  .is_sandboxed = true
+};
+udf_register(&entry);
+```
+
+## 🔐 Безопасность данных
+
+* Все пользовательские функции выполняются в изолированном окружении
+* Запрет системных вызовов, доступа к сети, файловой системе
+* Обязательная проверка времени исполнения, лимитов и версий
+
+## 🔄 UML-диаграмма
+
+```plantuml
+class udf_entry_t {
+  +char name[64]
+  +char language[16]
+  +char source_code[2048]
+  +bool is_aggregate
+  +uint64_t version
+  +bool is_sandboxed
+}
+```
+
+## 💼 Связь с бизнес-функциями
+
+* Пользовательские функции критичны для ERP/BI сценариев, включая расчёты, отчётность, временные агрегаты, динамическую аналитику.
+
+## 🕓 Версионирование и история изменений
+
+* Поддерживается семантика версий UDF
+* Возможность отката на предыдущую версию
+* Аудит всех CREATE / ALTER / DROP FUNCTION
+
+## 📢 Ошибки и сообщения
+
+* `ERR_UDF_NOT_FOUND` — попытка вызова несуществующей функции
+* `ERR_UDF_SECURITY` — нарушение sandbox-ограничений
+* `ERR_UDF_COMPILE` — ошибка компиляции внешней функции
+* `WARN_UDF_DEPRECATED` — вызов устаревшей версии функции
+
+## 🧩 Будущие доработки
+
+* Поддержка Python через встроенный интерпретатор с sandbox
+* Отложенная компиляция UDF в LLVM
+* Графические инструменты для отладки пользовательских функций
+* Автоматический анализ производительности и рекомендаций по UDF
